--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "axios": "^1.4.0",
     "esbuild": "^0.17.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
