--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "esbuild": "^0.17.19",
     "react": "^18.2.0",
+    "react-client-session": "^0.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
