--- a/test/fixtures/referrals.yml
+++ b/test/fixtures/referrals.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
+  email: one@email.com
   user: one
 
 two:
-  email: MyString
+  email: two@email.com
   user: two
